remove css text colors to improve color contrast accessibility issues

--- a/src/components/CampusDirectory/directoryprofile.css
+++ b/src/components/CampusDirectory/directoryprofile.css
@@ -9,7 +9,6 @@
   border-bottom: 1px solid #ECE9D8;
   background: #f5f5f5;
   padding: 30px;
-  color: #555;
   display: grid;
   grid-template-columns: 1fr 3fr 3fr;
 }
@@ -30,7 +29,6 @@
 }
 
 .profileheaditem h2{
-  color: #5e5e5e;
   margin: 0 !important;
   padding: 0;
   font-size: 23.2px;
@@ -57,7 +55,6 @@
   margin: 0;
   padding: 30px;
   font-size: 14px;
-  color: #555;
   border-bottom: 1px solid #ECE9D8;
   column-count: 2;
   column-gap: 30px;
